--- a/index style.css
+++ b/index style.css
@@ -14,16 +14,7 @@
     background-size: 100% 100%;
     position: absolute;
 }
-.navbar
-{
-    position: absolute;
-    display: flex;
-    align-items: center;
-    padding: 20px;
-    padding-left: 50px;
-    padding-right: 30px;
-    padding-top: 50px;
-}
+
 @keyframes border 
 {
     0%{border-radius: 1px;}
@@ -56,12 +47,49 @@
      animation-iteration-count: infinite;
      animation-timing-function: ease;
 }
-span
-{
-    position: absolute;
-    background: red;
-    transform: translate(-50%,-50%);
-    pointer-events: none;
-    border-radius: 100%;
-    animation: animate 1s linear infinite;
+
+.logo{
+    position: fixed;
+   text-align: right;
+   right: 10%
+}
+@keyframes qt {
+  0%{opacity:0.1; }
+  10%{opacity:0.2; }
+  20%{opacity:0.3; }
+  30%{opacity:0.4; }
+  40%{opacity:0.5; }
+  50%{opacity:0.6; }
+  60%{opacity:0.7; }
+  70%{opacity:0.8; }
+  80%{opacity:0.9; }
+  90%{opacity:1;  }
+  100%{opacity:1; }
+}
+.img-logo{
+  width:28%;
+  height:auto;
+
+  animation-name: qt;
+  animation-duration: 2s;
+     animation-iteration-count: infinite;
+     animation-timing-function: ease;
+
+}
+@media only screen and (max-width: 1024px ){
+  .img-logo{
+    width: 35%;
+    height: auto;
+  }
+  .logo{
+    position:fixed;
+    text-align: right;
+    right:4%;
+  }
+}
+@media only screen and (max-width: 500px){
+  .start-image{
+    width:100px;
+    height: 60px;
+  }
 }
