--- a/topic style.css
+++ b/topic style.css
@@ -1,21 +1,30 @@
 *
 {
+  margin:0;
+  padding:0;
   box-sizing: border-box;
+}
+body
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    flex-direction: row;
+    background: #040d15;
 }
 .background-topic
 {
   height: 100%;
   width: 100%;
-  background-image:linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)) url(Images/Topic.jpg);
+  
   background-color: rgba(0, 4, 255, 0.452);
   background-position: center;
   background-attachment: scroll;
   background-size:cover;
+
 }
-.background-topic
-{
-  background: selina;
-}
+
 .bgd
 {
     max-width: 1200px;
@@ -23,8 +32,15 @@
     background: lightpink;
     overflow: auto;
 }
+
+
 .topic
 {
+  border: 5px solid rgba(0, 4, 255, 0.452);
+  border-radius: 9px;
+  padding-top: 2%;
+  padding-left: 1%;
+  padding-right: 1%;
   margin:2px;
   float: left;
   width:390px;
@@ -36,37 +52,27 @@
   
 
 }
-.title
-{
-  padding:2px;
-  margin: -2px;
-  text-align: center;
-  font-weight:800;
-  font-size: 18px;
-  word-spacing: 5px;
-  font-style: italic;
+.title{
+  text-align:center;
 }
-.title:hover
-{
-  color: mediumseagreen;
-  border-radius: 8px;
-  scale:(0.8,0.8);
-}
+
 .Start
 {
   padding-left: 46%;
+ 
+  
 }
-body
-{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    flex-direction: row;
-    background: #040d15;
+.restart{
+   border: none;
+   background: lightpink;
+   
+   
 }
+
 a
 {
+    text-align: center;
+    word-spacing: 5px;
     position: relative;
     display: inline-block;
     padding: 12px 36px;
@@ -78,41 +84,16 @@ a
     letter-spacing: 2px;
     border-radius: 40px;
     overflow: hidden;
-    background: linear-gradient(90deg,#ff7b00,yellow);
+    background: linear-gradient(15deg,#ff7b00,yellow);
+    font-weight:800;
+   font-style: italic;
 }
-a:nth-child(2)
+a:hover
 {
-    background: linear-gradient(90deg,green,yellow);
+  background: linear-gradient(15deg,yellow,#ff7b00);
+  color: mediumseagreen;
+  border-radius: 8px;
+  scale:(0.8,0.8);
 }
-span
-{
-    position: absolute;
-    background: purple;
-    transform: translate(-50%,-50%);
-    pointer-events: none;
-    border-radius: 50%;
-    animation: animate 1s linear infinite;
-}
-@keyframes animate
-{
-    0%
-    {
-        width: 0px;
-        height: 0px;
-        opacity: 0.5;
-    }
-    100%
-    {
-        width: 500px;
-        height: 500px;
-        opacity: 0;
-    }
-}
-.Start
-{
-    padding-left: 45%;
-    padding-top: 25%;
-}
-
 
 
